--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Links da Empresa</h1>
+    <h1>Grupo Corcelli</h1>
     <a class="whatsapp" href="https://wa.me/+5511915417060" target="_blank">
       <span class="icon">💬</span> WhatsApp
     </a>
