--- a/index.html
+++ b/index.html
@@ -6,44 +6,93 @@
   <title>Links do Grupo Corcelli</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f0f0f0; text-align: center; }
-    .container { margin: 60px auto; padding: 40px; background: #fff; border-radius: 10px; max-width: 400px; box-shadow: 0 2px 8px #0001;}
-    h1 { color: #333; }
-    a { 
+    .container { margin: 60px auto; padding: 40px 20px; background: #fff; border-radius: 10px; max-width: 400px; box-shadow: 0 2px 8px #0001;}
+    h1 { color: #333; margin-bottom: 30px; }
+    .logo {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 25px;
+      border: 4px solid #eee;
+      box-shadow: 0 2px 6px #0002;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    a.link-btn {
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: 10px;
-      margin: 15px 0; 
-      padding: 15px; 
-      border-radius: 5px; 
-      color: white; 
-      text-decoration: none; 
-      font-size: 18px; 
-      transition: background .2s;
+      justify-content: flex-start;
+      gap: 14px;
+      margin: 13px 0;
+      padding: 13px 20px;
+      border-radius: 5px;
+      color: white;
+      text-decoration: none;
+      font-size: 17px;
+      font-weight: 500;
+      box-shadow: 0 2px 6px #0001;
+      transition: transform .12s, box-shadow .12s, opacity .2s;
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    .whatsapp { background: #25d366; }
-    .facebook { background: #4267B2; }
-    .instagram { background: #E1306C; }
+    .link-btn svg { width: 28px; height: 28px; flex-shrink: 0; }
+    .whatsapp { background: #25D366; }
+    .facebook { background: #1877F3; }
+    .instagram { background: linear-gradient(90deg, #f9ce34 0%, #ee2a7b 50%, #6228d7 100%); }
+    .tiktok { background: #010101; }
     .site { background: #333; }
-    a:hover { opacity: 0.9; }
-    .icon { font-size: 1.4em; }
+    .email { background: #EA4335; }
+    .phone { background: #008080; }
+    a.link-btn:hover { transform: translateY(-2px) scale(1.03); box-shadow: 0 5px 16px #0002; opacity: .92; }
+    .footer { margin-top: 25px; font-size: 12px; color: #aaa; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Grupo Corcelli</h1>
-    <a class="whatsapp" href="https://wa.me/+5511915417060" target="_blank">
-      <span class="icon">💬</span> WhatsApp
+    <!-- Troque o src abaixo pela URL do seu logo -->
+    <img class="logo" src="https://www.bing.com/images/search?view=detailV2&ccid=8i5FrbHu&id=C672EFFB8E0095C93A16E211D3AFAB82F6FE5DB7&thid=OIP.8i5FrbHunhpc-mqn6lHLVAAAAA&mediaurl=https%3A%2F%2Fimages.tcdn.com.br%2Fimg%2Fimg_prod%2F817484%2F1624017840_logocorcelli-siet1.png&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.f22e45adb1ee9e1a5cfa6aa7ea51cb54%3Frik%3Dt13%252b9oKrr9MR4g%26pid%3DImgRaw%26r%3D0&exph=237&expw=474&q=logo+grupo+corcelli&simid=608042652988945251&form=IRPRST&ck=2F39DB6C5365807E582BDE26CCA12742&selectedindex=1&itb=1&ajaxhist=0&ajaxserp=0&pivotparams=insightsToken%3Dccid_%252Ba2og7IY*cp_EB900F2E37927882819C1261CD74E9C1*mid_B2BE9A2FCE0F1F7E758FC601B42FFE3D09CC8975*simid_608048683138357254*thid_OIP.-a2og7IY9FHjAtVcHWO5fAHaD9&vt=0&sim=11&iss=VSI&ajaxhist=0&ajaxserp=0" alt="Logo da empresa">
+    <h1>Links da Empresa</h1>
+    <!-- WhatsApp -->
+    <a class="link-btn whatsapp" href="https://wa.me/+5511915417060" target="_blank">
+      <svg viewBox="0 0 32 32"><path fill="#FFF" d="M16 2.9A13.1 13.1 0 0 0 7.2 25.3l-2.1 6.2 6.5-2A13.1 13.1 0 1 0 16 2.9zm0 23.7c-2.2 0-4.3-.6-6.2-1.8l-.4-.3-3.9 1.2 1.3-3.8-.3-.4a10.7 10.7 0 1 1 9.5 5.1zm6.1-8.2c-.3-.2-1.8-.9-2.1-1-0.3-.1-.5-.2-.7.2-.2.3-.8 1-1 1.2-.2.2-.4.2-.7.1-.3-.2-1.3-.5-2.5-1.7-.9-.8-1.5-1.8-1.6-2.1-.2-.3 0-.5.1-.7.1-.2.2-.4.3-.5.1-.1.1-.2.2-.4.1-.2 0-.4 0-.6s-.7-1.7-1-2.3c-.3-.5-.6-.5-.7-.5h-.6c-.2 0-.4 0-.5.2-.7.6-1 1.5-.7 2.3.3.9 1.1 2.3 2.6 3.7 1.8 1.7 3.6 2.2 4.4 2.4.4.1.8 0 1.1-.2.4-.2 1.2-1.1 1.4-1.6.2-.3.2-.6.1-.8-.1-.2-.5-.4-.7-.5z"/></svg>
+      WhatsApp
     </a>
-    <a class="facebook" href="https://facebook.com/grupo.corcelli" target="_blank">
-      <span class="icon">📘</span> Facebook
+    <!-- Facebook -->
+    <a class="link-btn facebook" href="https://facebook.com/grupo.corcelli" target="_blank">
+      <svg viewBox="0 0 32 32"><path fill="#FFF" d="M29 0H3C1.3 0 0 1.3 0 3v26c0 1.7 1.3 3 3 3h13V20h-4v-5h4v-3.7C16 8 18.6 6 21.9 6c1.1 0 2.2 0.1 2.5 0.1V10h-1.7c-1.4 0-1.7 0.7-1.7 1.7V15h4.2l-0.6 5h-3.6v12H29c1.7 0 3-1.3 3-3V3C32 1.3 30.7 0 29 0z"/></svg>
+      Facebook
     </a>
-    <a class="instagram" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-      <span class="icon">📸</span> Instagram
+    <!-- Instagram -->
+    <a class="link-btn instagram" href="https://instagram.com/Grupo_Corcelli" target="_blank">
+      <svg viewBox="0 0 32 32"><radialGradient id="a" cx="16" cy="16" r="16" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f9ce34"/><stop offset="0.5" stop-color="#ee2a7b"/><stop offset="1" stop-color="#6228d7"/></radialGradient><rect width="32" height="32" rx="7" fill="url(#a)"/><path fill="#FFF" d="M16 10.9A5.1 5.1 0 1 0 21.1 16 5.1 5.1 0 0 0 16 10.9zm0 8.4A3.3 3.3 0 1 1 19.3 16 3.3 3.3 0 0 1 16 19.3zm6.4-8.7a1.2 1.2 0 1 1-1.2-1.2 1.2 1.2 0 0 1 1.2 1.2zm3.4 1.2a7.6 7.6 0 0 0-2.1-5.3A7.6 7.6 0 0 0 22.3 5a7.6 7.6 0 0 0-5.3-2.1h-2A7.6 7.6 0 0 0 9.7 5a7.6 7.6 0 0 0-2.1 2.1A7.6 7.6 0 0 0 5 9.7 7.6 7.6 0 0 0 2.9 15v2A7.6 7.6 0 0 0 5 22.3a7.6 7.6 0 0 0 2.1 2.1 7.6 7.6 0 0 0 5.3 2.1h2a7.6 7.6 0 0 0 5.3-2.1 7.6 7.6 0 0 0 2.1-2.1 7.6 7.6 0 0 0 2.1-5.3v-2a7.6 7.6 0 0 0-2.1-5.3zM28 17a5.9 5.9 0 0 1-1.7 4.2 5.9 5.9 0 0 1-4.2 1.7h-2A5.9 5.9 0 0 1 16 28a5.9 5.9 0 0 1-4.2-1.7A5.9 5.9 0 0 1 10 22.3v-2A5.9 5.9 0 0 1 2.9 16v-2A5.9 5.9 0 0 1 10 9.7a5.9 5.9 0 0 1 4.2-1.7h2A5.9 5.9 0 0 1 28 15v2z"/></svg>
+      Instagram
     </a>
-    <a class="site" href="http://www.grupocorcelli.com/" target="_blank">
-      <span class="icon">🌐</span> Site Oficial
+    <!-- TikTok -->
+    <a class="link-btn tiktok" href="https://www.tiktok.com/grupocorcelli" target="_blank">
+      <svg viewBox="0 0 32 32"><path fill="#25F4EE" d="M29.8 9.4c-2.2-.1-4.3-1.2-5.4-3V23c0 3.3-2.7 6-6 6s-6-2.7-6-6 2.7-6 6-6c.2 0 .3 0 .5 0v-4.1c-.2 0-.3 0-.5 0-5.5 0-10 4.5-10 10s4.5 10 10 10 10-4.5 10-10V9.4z"/><path fill="#FE2C55" d="M29.8 9.4c-2.2-.1-4.3-1.2-5.4-3V23c0 3.3-2.7 6-6 6V23c3.3 0 6-2.7 6-6V9.4z"/><path fill="#FFF" d="M24.4 9.4c-2.2-.1-4.3-1.2-5.4-3V23c0 3.3-2.7 6-6 6s-6-2.7-6-6 2.7-6 6-6c.2 0 .3 0 .5 0v-4.1c-.2 0-.3 0-.5 0-5.5 0-10 4.5-10 10s4.5 10 10 10 10-4.5 10-10V9.4z"/></svg>
+      TikTok
     </a>
+    <!-- Site -->
+    <a class="link-btn site" href="http://www.grupocorcelli.com/" target="_blank">
+      <svg viewBox="0 0 32 32"><path fill="#FFF" d="M16 2.7A13.3 13.3 0 1 0 29.3 16 13.3 13.3 0 0 0 16 2.7zm0 24A10.7 10.7 0 1 1 26.7 16 10.7 10.7 0 0 1 16 26.7zm0-18.7a8 8 0 1 0 8 8 8 8 0 0 0-8-8zm0 14.7a6.7 6.7 0 1 1 6.7-6.7A6.7 6.7 0 0 1 16 22.7z"/></svg>
+      Site Oficial
+    </a>
+    <!-- E-mail -->
+    <a class="link-btn email" href="mailto:botcorcelli@gmail.com">
+      <svg viewBox="0 0 32 32"><path fill="#FFF" d="M29 4H3C1.3 4 0 5.3 0 7v18c0 1.7 1.3 3 3 3h26c1.7 0 3-1.3 3-3V7c0-1.7-1.3-3-3-3zm0 2l-13 9-13-9h26zm0 22H3V8.4l12.1 8.4c.2.1.5.1.8 0L29 8.4V26z"/></svg>
+      E-mail
+    </a>
+    <!-- Telefone -->
+    <a class="link-btn phone" href="tel:11915417060">
+      <svg viewBox="0 0 32 32"><path fill="#FFF" d="M29.2 23.4l-6.2-2.6a3.2 3.2 0 0 0-3.7 0.8l-2.3 2.9a19.4 19.4 0 0 1-8.7-8.7l2.9-2.3a3.2 3.2 0 0 0 0.8-3.7l-2.6-6.2A3.2 3.2 0 0 0 2.8 2H2.7A3.2 3.2 0 0 0 0 5.7C0 21.3 10.7 32 26.3 32a3.2 3.2 0 0 0 3.7-3.2v-0.1a3.2 3.2 0 0 0-0.8-2.3z"/></svg>
+      Ligue: (11) 99999-8888
+    </a>
+    <div class="footer">
+      &copy; 2025 Sua Empresa. Todos os direitos reservados.
+    </div>
   </div>
 </body>
 </html>
