--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
   <div class="container">
     <!-- Troque o src abaixo pelo caminho do seu logo -->
-    <img class="logo" src="imagens/logo.png" alt="Logo da empresa">
+    <img class="logo" src="logo.png" alt="Logo da empresa">
     <h1>Grupo Corcelli</h1>
     <!-- WhatsApp -->
     <a class="link-btn whatsapp" href="https://wa.me/5511915417060" target="_blank">
