--- a/index.html
+++ b/index.html
@@ -64,37 +64,37 @@
     <!-- Troque o src abaixo pelo caminho do seu logo -->
     <img class="logo" src="logo.png" alt="Logo da empresa">
     <h1>Grupo Corcelli</h1>
+   <!-- Salvar Contato -->
+    <a class="link-btn salvar" href="contato.vcf" download>
+      <img src="contato.png" alt="Salvar contato"> Salvar contato
+    </a>
     <!-- WhatsApp -->
     <a class="link-btn whatsapp" href="https://wa.me/5511915417060" target="_blank">
-      <img src="imagens/whatsapp.png" alt="WhatsApp"> WhatsApp
+      <img src="whatsapp.svg" alt="WhatsApp"> WhatsApp
     </a>
     <!-- Facebook -->
     <a class="link-btn facebook" href="https://facebook.com/grupo.corcelli" target="_blank">
-      <img src="imagens/facebook.png" alt="Facebook"> Facebook
+      <img src="facebook.svg" alt="Facebook"> Facebook
     </a>
     <!-- Instagram -->
     <a class="link-btn instagram" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-      <img src="imagens/instagram.png" alt="Instagram"> Instagram
+      <img src="instagram.png" alt="Instagram"> Instagram
     </a>
     <!-- TikTok -->
     <a class="link-btn tiktok" href="https://www.tiktok.com/grupocorcelli" target="_blank">
-      <img src="imagens/tiktok.png" alt="TikTok"> TikTok
+      <img src="tiktok.png" alt="TikTok"> TikTok
     </a>
     <!-- Site -->
     <a class="link-btn site" href="http://www.grupocorcelli.com/" target="_blank">
-      <img src="imagens/site.png" alt="Site"> Site Oficial
+      <img src="site.png" alt="Site"> Site Oficial
     </a>
     <!-- E-mail -->
     <a class="link-btn email" href="mailto:botcorcelli@gmail.com">
-      <img src="imagens/email.png" alt="E-mail"> E-mail
+      <img src="email.png" alt="E-mail"> E-mail
     </a>
     <!-- Telefone -->
     <a class="link-btn phone" href="tel:11915417060">
-      <img src="imagens/phone.png" alt="Telefone"> Ligue: (11) 91541-7060
-    </a>
-    <!-- Salvar Contato -->
-    <a class="link-btn salvar" href="contato.vcf" download>
-      <img src="imagens/contact.png" alt="Salvar contato"> Salvar contato
+      <img src="call.png" alt="Telefone"> Ligue: (11) 91541-7060
     </a>
     <div class="footer">
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
