--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
     </a>
     <!-- Instagram -->
     <a class="link-btn instagram" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-      <img src="instagram.png" alt="Instagram"> Instagram
+      <img src="instagram.svg" alt="Instagram"> Instagram
     </a>
     <!-- TikTok -->
     <a class="link-btn tiktok" href="https://www.tiktok.com/grupocorcelli" target="_blank">
-      <img src="tiktok.png" alt="TikTok"> TikTok
+      <img src="tiktok.svg" alt="TikTok"> TikTok
     </a>
     <!-- Site -->
     <a class="link-btn site" href="http://www.grupocorcelli.com/" target="_blank">
-      <img src="site.png" alt="Site"> Site Oficial
+      <img src="site.svg" alt="Site"> Site Oficial
     </a>
     <!-- E-mail -->
     <a class="link-btn email" href="mailto:botcorcelli@gmail.com">
-      <img src="email.png" alt="E-mail"> E-mail
+      <img src="email.svg" alt="E-mail"> E-mail
     </a>
     <!-- Telefone -->
     <a class="link-btn phone" href="tel:11915417060">
-      <img src="call.png" alt="Telefone"> Ligue: (11) 91541-7060
+      <img src="call.svg" alt="Telefone"> Ligue: (11) 91541-7060
     </a>
     <div class="footer">
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
