--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h1>Grupo Corcelli</h1>
    <!-- Salvar Contato -->
     <a class="link-btn salvar" href="contato.vcf" download>
-      <img src="contato.png" alt="Salvar contato"> Salvar contato
+      <img src="contato.svg" alt="Salvar contato"> Salvar contato
     </a>
     <!-- WhatsApp -->
     <a class="link-btn whatsapp" href="https://wa.me/5511915417060" target="_blank">
@@ -86,7 +86,7 @@
     </a>
     <!-- Site -->
     <a class="link-btn site" href="http://www.grupocorcelli.com/" target="_blank">
-      <img src="site.svg" alt="Site"> Site Oficial
+      <img src="logo.png" alt="Site"> Site Oficial
     </a>
     <!-- E-mail -->
     <a class="link-btn email" href="mailto:botcorcelli@gmail.com">
