--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     .container { margin: 60px auto; padding: 40px 20px; background: #fff; border-radius: 10px; max-width: 400px; box-shadow: 0 2px 8px #0001;}
     h1 { color: #333; margin-bottom: 30px; }
     .logo {
-      width: 120px;
-      height: 120px;
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 25px;
@@ -26,7 +26,7 @@
       justify-content: flex-start;
       gap: 14px;
       margin: 13px 0;
-      padding: 13px 20px;
+      padding: 1px 20px;
       border-radius: 5px;
       color: white;
       text-decoration: none;
@@ -34,18 +34,22 @@
       font-weight: 500;
       box-shadow: 0 2px 6px #0001;
       transition: transform .12s, box-shadow .12s, opacity .2s;
-      max-width: 300px;
+      max-width: 250px;
       margin-left: auto;
       margin-right: auto;
       background: #555; /* fallback */
     }
     .link-btn img {
-      width: 45px;
-      height: 45px;
+      width: 28px;
+      height: 28px;
       border-radius: 50%;
       object-fit: contain;
       background: white;
       padding: 2px;
+    }
+    .icon-whatsapp {
+      width: 48px !important;
+      height: 48px !important;
     }
     .whatsapp { background: #25D366; }
     .facebook { background: #1877F3; }
@@ -66,35 +70,35 @@
     <h1>Grupo Corcelli</h1>
    <!-- Salvar Contato -->
     <a class="link-btn salvar" href="contato.vcf" download>
-      <img src="contato.svg" alt="Salvar contato"> Salvar contato
+      <img class="icon-whatsapp" src="contato.svg" alt="Salvar contato"> Salvar contato
     </a>
     <!-- WhatsApp -->
     <a class="link-btn whatsapp" href="https://wa.me/5511915417060" target="_blank">
-      <img src="whatsapp.svg" alt="WhatsApp"> WhatsApp
+      <img class="icon-whatsapp" src="whatsapp.svg" alt="WhatsApp"> WhatsApp
     </a>
     <!-- Facebook -->
     <a class="link-btn facebook" href="https://facebook.com/grupo.corcelli" target="_blank">
-      <img src="facebook.svg" alt="Facebook"> Facebook
+      <img class="icon-whatsapp" src="facebook.svg" alt="Facebook"> Facebook
     </a>
     <!-- Instagram -->
     <a class="link-btn instagram" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-      <img src="instagram.svg" alt="Instagram"> Instagram
+      <img class="icon-whatsapp" src="instagram.svg" alt="Instagram"> Instagram
     </a>
     <!-- TikTok -->
     <a class="link-btn tiktok" href="https://www.tiktok.com/grupocorcelli" target="_blank">
-      <img src="tiktok.svg" alt="TikTok"> TikTok
+      <img class="icon-whatsapp" src="tiktok.svg" alt="TikTok"> TikTok
     </a>
     <!-- Site -->
     <a class="link-btn site" href="http://www.grupocorcelli.com/" target="_blank">
-      <img src="logo.png" alt="Site"> Site Oficial
+      <img class="icon-whatsapp" src="logo.png" alt="Site"> Site Oficial
     </a>
     <!-- E-mail -->
     <a class="link-btn email" href="mailto:botcorcelli@gmail.com">
-      <img src="email.svg" alt="E-mail"> E-mail
+      <img class="icon-whatsapp" src="email.svg" alt="E-mail"> E-mail
     </a>
     <!-- Telefone -->
     <a class="link-btn phone" href="tel:11915417060">
-      <img src="call.svg" alt="Telefone"> Ligue: (11) 91541-7060
+      <img class="icon-whatsapp" src="call.svg" alt="Telefone"> Ligue: (11) 91541-7060
     </a>
     <div class="footer">
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
