--- a/index2.html
+++ b/index2.html
@@ -171,42 +171,42 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="imagens/logo.png" alt="Logo da empresa">
+    <img class="logo" src="logo.png" alt="Logo da empresa">
     <h1>Grupo Corcelli</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
       <a class="destaque-link salvar" href="contato.vcf" download>
-        <img class="icon-img" src="imagens/contact.png" alt="Salvar contato">
+        <img class="icon-img" src="contact.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
       <a class="destaque-link phone" href="tel:11915417060">
-        <img class="icon-img" src="imagens/phone.png" alt="Telefone">
+        <img class="icon-img" src="phone.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
     </div>
     <div class="icon-grid">
       <a class="icon-link" href="https://wa.me/5511915417060" target="_blank">
-        <img class="icon-img" src="imagens/whatsapp.png" alt="WhatsApp">
+        <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
       <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank">
-        <img class="icon-img" src="imagens/facebook.png" alt="Facebook">
+        <img class="icon-img" src="imagens/facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
       <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-        <img class="icon-img" src="imagens/instagram.png" alt="Instagram">
+        <img class="icon-img" src="imagens/instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
       <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank">
-        <img class="icon-img" src="imagens/tiktok.png" alt="TikTok">
+        <img class="icon-img" src="imagens/tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
       <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank">
-        <img class="icon-img" src="imagens/site.png" alt="Site">
+        <img class="icon-img" src="imagens/site.svg" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com">
-        <img class="icon-img" src="imagens/email.png" alt="E-mail">
+        <img class="icon-img" src="imagens/email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
     </div>
