--- a/index2.html
+++ b/index2.html
@@ -176,11 +176,11 @@
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
       <a class="destaque-link salvar" href="contato.vcf" download>
-        <img class="icon-img" src="contact.svg" alt="Salvar contato">
+        <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
       <a class="destaque-link phone" href="tel:11915417060">
-        <img class="icon-img" src="phone.svg" alt="Telefone">
+        <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
     </div>
@@ -190,23 +190,23 @@
         <span class="icon-label">WhatsApp</span>
       </a>
       <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank">
-        <img class="icon-img" src="imagens/facebook.svg" alt="Facebook">
+        <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
       <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank">
-        <img class="icon-img" src="imagens/instagram.svg" alt="Instagram">
+        <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
       <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank">
-        <img class="icon-img" src="imagens/tiktok.svg" alt="TikTok">
+        <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
       <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank">
-        <img class="icon-img" src="imagens/site.svg" alt="Site">
+        <img class="icon-img" src="site.svg" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com">
-        <img class="icon-img" src="imagens/email.svg" alt="E-mail">
+        <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
     </div>
