--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
     .destaque-link .icon-img {
       width: 60px;
       height: 60px;
-      border-radius: 50%;
+      border-radius: 40%;
       object-fit: contain;
       margin-bottom: 6px;
       background: #fff;
@@ -202,7 +202,7 @@
         <span class="icon-label">TikTok</span>
       </a>
       <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank">
-        <img class="icon-img" src="site.svg" alt="Site">
+        <img class="icon-img" src="logo.svg" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com">
