--- a/index2.html
+++ b/index2.html
@@ -202,7 +202,7 @@
         <span class="icon-label">TikTok</span>
       </a>
       <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank">
-        <img class="icon-img" src="logo.svg" alt="Site">
+        <img class="icon-img" src="logo.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
       <a class="icon-link" href="mailto:botcorcelli@gmail.com">
