--- a/index2.html
+++ b/index2.html
@@ -159,7 +159,8 @@
       font-size: 12px;
       color: #aaa;
     }
-    @media (max-width: 630px) {
+    @media (max-width: 430px) {
+      .container { max-width: 98vw; padding: 10vw 1vw; }
       .container { padding: 20px 2vw; }
       .icon-grid { grid-template-columns: repeat(2, 1fr); gap: 18px 8px; }
       .icon-img { width: 36px; height: 36px;}
