--- a/index2.html
+++ b/index2.html
@@ -161,11 +161,10 @@
     }
     @media (max-width: 430px) {
       .container { max-width: 98vw; padding: 10vw 1vw; }
-      .container { padding: 20px 2vw; }
       .icon-grid { grid-template-columns: repeat(2, 1fr); gap: 18px 8px; }
-      .icon-img { width: 60px; height: 60px;}
+      .icon-img,
+      .destaque-link .icon-img { width: 70px; height: 70px; }
       .logo { width: 90px; height: 90px;}
-      .destaque-link .icon-img { width: 40px; height: 40px; }
       .destaque-label { font-size: 12px; }
     }
   </style>
