--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     @media (max-width: 600px) {
       body {
-        background: url('fundoapp.jpg') no-repeat center center fixed;
+        background: url('fundoapp.jpg') no-repeat center center;
         background-size: cover;
       }
     }
