--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .container {
       margin: 60px auto;
       padding: 40px 20px;
-      background: rgba(255,255,255,0.85); /* branco com transparência */
+      /*background: rgba(255,255,255,0.85); /* branco com transparência */
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0001;
