--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     .link-btn img {
       width: 28px;
       height: 28px;
-      border-radius: 50%;
+      border-radius: 40%;
+      opacity: 0.7;
       object-fit: contain;
       background: white;
       padding: 2px;
