--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     }
     @media (max-width: 600px) {
       body {
-        background: url('fundoapp1.jpg') no-repeat center center;
+        background: url('fundo app.jpg') no-repeat center center;
         background-size: cover;
       }
     }
     .container {
-      margin: 40px auto;
+      margin: 20px auto;
       padding: 40px 20px;
-      /*background: rgba(255,255,255,0.85); /* branco com transparência */
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0001;
@@ -45,7 +44,7 @@
       gap: 14px;
       margin: 13px 0;
       padding: 1px 20px;
-      border-radius: 5px;
+      border-radius: 30px; /* Cantos bem arredondados */
       color: white;
       text-decoration: none;
       font-size: 17px;
@@ -55,7 +54,7 @@
       max-width: 250px;
       margin-left: auto;
       margin-right: auto;
-      background: #555;
+      background: rgba(0, 0, 0, 0.7); /* Fundo igual para todos os botões: preto com 30% de transparência */
     }
     .link-btn img {
       width: 28px;
@@ -70,14 +69,7 @@
       width: 48px !important;
       height: 48px !important;
     }
-    .whatsapp { background: #25D366; }
-    .facebook { background: #1877F3; }
-    .instagram { background: radial-gradient(circle at 30% 110%, #f9ce34 0%, #ee2a7b 50%, #6228d7 100%); }
-    .tiktok { background: #000000; }
-    .site { background: #333; }
-    .email { background: #EA4335; }
-    .phone { background: #008080; }
-    .salvar { background: #4CAF50; }
+    /* Classes de cor de botão removidas, pois todos usam o mesmo fundo agora */
     a.link-btn:hover { transform: translateY(-2px) scale(1.03); box-shadow: 0 5px 16px #0002; opacity: .92; }
     .footer { margin-top: 25px; font-size: 12px; color: #aaa; }
   </style>
