--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     @media (max-width: 600px) {
       body {
-        background: url('fundo app.jpg') no-repeat center center;
+        background: url('fundoapp1.jpg') no-repeat center center;
         background-size: cover;
       }
     }
@@ -44,7 +44,7 @@
       gap: 14px;
       margin: 13px 0;
       padding: 1px 20px;
-      border-radius: 30px; /* Cantos bem arredondados */
+      border-radius: 40px; /* Cantos bem arredondados */
       color: white;
       text-decoration: none;
       font-size: 17px;
@@ -54,13 +54,12 @@
       max-width: 250px;
       margin-left: auto;
       margin-right: auto;
-      background: rgba(0, 0, 0, 0.7); /* Fundo igual para todos os botões: preto com 30% de transparência */
+      background: rgba(0, 0, 0, 0.7); /* Fundo igual para todos os botões: preto com 60% de transparência */
     }
     .link-btn img {
       width: 28px;
       height: 28px;
-      border-radius: 40%;
-      opacity: 0.7;
+      border-radius: 50%;
       object-fit: contain;
       background: white;
       padding: 2px;
