--- a/index2.html
+++ b/index2.html
@@ -12,12 +12,18 @@
       margin: 0;
       padding: 0;
     }
+    @media (max-width: 600px) {
+      body {
+        background: url('fundoapp1.jpg') no-repeat center center;
+        background-size: cover;
+      }
+    }
     .container {
-      margin: 60px auto;
+      margin: 20px auto;
       padding: 40px 20px;
       background: #fff;
       border-radius: 10px;
-      max-width: 420px;
+      max-width: 400px;
       box-shadow: 0 2px 8px #0001;
     }
     .logo {
