--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       max-width: 400px;
       box-shadow: 0 2px 8px #0001;
     }
-    h1 { color: #fff; margin-bottom: 30px; }
+    h1 { color: #333; margin-bottom: 30px; }
     .logo {
       width: 130px;
       height: 130px;
