--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
     .container {
       margin: 20px auto;
       padding: 40px 20px;
-      background: #fff;
+      /*background: #fff;*/
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0001;
