--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80') no-repeat center center;
+      background: url('fundoapp1.jpg') no-repeat center center;
       background-size: cover;
       text-align: center;
       margin: 0;
