--- a/index2.html
+++ b/index2.html
@@ -13,22 +13,209 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
+      color: #fff; /* texto branco */
     }
     .container {
       margin: 20px auto;
       padding: 40px 20px;
       border-radius: 10px;
       max-width: 400px;
-      box-shadow: 0 2px 8px #0001;
+      box-shadow: 0 2px 8px #0008;
+      background: rgba(0,0,0,0.6); /* fundo preto translúcido */
     }
-    /* ...restante igual... */
+    .logo {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 25px;
+      border: 4px solid #fff;
+      box-shadow: 0 2px 6px #0002;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      background: #fff;
+    }
+    h1, .redes-title, .destaque-label, .icon-label {
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    .redes-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 32px 0 22px 0;
+      letter-spacing: 0.01em;
+    }
+    .destaque-row {
+      display: flex;
+      justify-content: center;
+      gap: 36px;
+      margin-bottom: 36px;
+    }
+    .destaque-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      background: none;
+      box-shadow: none;
+      outline: none;
+      cursor: pointer;
+    }
+    .destaque-link:active,
+    .destaque-link:focus,
+    .destaque-link:hover {
+      opacity: 0.9;
+      transform: translateY(-1px) scale(1.04);
+    }
+    .destaque-link .icon-img {
+      width: 70px;
+      height: 70px;
+      border-radius: 40%;
+      object-fit: contain;
+      margin-bottom: 6px;
+      background: #fff;
+      box-shadow: 0 2px 10px #0002;
+      padding: 6px;
+      border: 2px solid #eee;
+      transition: box-shadow 0.2s;
+      display: block;
+    }
+    .destaque-link.salvar .icon-img {
+      background: #4CAF50;
+      border: 2px solid #388E3C;
+    }
+    .destaque-link.phone .icon-img {
+      background: #1877F3;
+      border: 2px solid #1257A3;
+    }
+    .destaque-label {
+      font-size: 14px;
+      font-weight: bold;
+      margin-top: 2px;
+      transition: opacity 0.18s;
+      letter-spacing: 0.01em;
+    }
+    .icon-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px 12px;
+      justify-items: center;
+      margin-top: 0;
+      margin-bottom: 16px;
+    }
+    .icon-link {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 500;
+      background: none;
+      box-shadow: none;
+      outline: none;
+      cursor: pointer;
+    }
+    .icon-link:active,
+    .icon-link:focus,
+    .icon-link:hover {
+      opacity: 0.9;
+      transform: translateY(-2px) scale(1.03);
+    }
+    .icon-img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: contain;
+      background: #fff;
+      box-shadow: 0 2px 6px #0001;
+      margin-bottom: 4px;
+      padding: 4px;
+      border: 2px solid #eee;
+      transition: box-shadow 0.2s;
+      display: block;
+    }
+    .icon-label {
+      opacity: 0;
+      height: 0;
+      font-size: 10px;
+      font-weight: 400;
+      pointer-events: none;
+      transition: opacity 0.18s;
+      margin-top: 1px;
+      margin-bottom: 0;
+      letter-spacing: 0.01em;
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    .icon-link:hover .icon-label,
+    .icon-link:focus .icon-label {
+      opacity: 1;
+      height: auto;
+      pointer-events: auto;
+    }
+    footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: #fff;
+      text-shadow: 0 1px 4px #0009;
+    }
+    @media (max-width: 430px) {
+      .container { max-width: 98vw; padding: 10vw 1vw; }
+      .icon-grid { grid-template-columns: repeat(2, 1fr); gap: 18px 8px; }
+      .icon-img,
+      .destaque-link .icon-img { width: 70px; height: 70px; }
+      .logo { width: 90px; height: 90px;}
+      .destaque-label { font-size: 12px; }
+    }
   </style>
 </head>
 <body>
   <main class="container">
-    <!-- ...seu conteúdo... -->
+    <img class="logo" src="logo.png" alt="Logo da empresa Grupo Corcelli">
     <h1>Grupo Corcelli</h1>
-    <!-- ...restante igual... -->
+    <div class="redes-title">Acesse nossas redes sociais</div>
+    <div class="destaque-row">
+      <a class="destaque-link salvar" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+        <img class="icon-img" src="contato.svg" alt="Salvar contato">
+        <span class="destaque-label">Salvar contato</span>
+      </a>
+      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar para Grupo Corcelli">
+        <img class="icon-img" src="call.svg" alt="Telefone">
+        <span class="destaque-label">Ligar</span>
+      </a>
+    </div>
+    <div class="icon-grid">
+      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+        <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
+        <span class="icon-label">WhatsApp</span>
+      </a>
+      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+        <img class="icon-img" src="facebook.svg" alt="Facebook">
+        <span class="icon-label">Facebook</span>
+      </a>
+      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+        <img class="icon-img" src="instagram.svg" alt="Instagram">
+        <span class="icon-label">Instagram</span>
+      </a>
+      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+        <img class="icon-img" src="tiktok.svg" alt="TikTok">
+        <span class="icon-label">TikTok</span>
+      </a>
+      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
+        <img class="icon-img" src="logo.png" alt="Site">
+        <span class="icon-label">Site</span>
+      </a>
+      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+        <img class="icon-img" src="email.svg" alt="E-mail">
+        <span class="icon-label">E-mail</span>
+      </a>
+    </div>
+    <footer>
+      &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
+    </footer>
   </main>
 </body>
 </html>
