--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       background: url('fundoapp1.jpg') no-repeat center center;
-      background-size: cover;
+      background: #f0f0f0;
       text-align: center;
       margin: 0;
       padding: 0;
