--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0008;
-    
+      /* Sem fundo, totalmente transparente */
     }
     .logo {
       width: 130px;
