--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      color: #fff; /* texto branco */
+      color: #fff;
     }
     .container {
       margin: 20px auto;
@@ -21,7 +21,6 @@
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0008;
-      /* Sem fundo, totalmente transparente */
     }
     .logo {
       width: 130px;
@@ -162,6 +161,18 @@
       color: #fff;
       text-shadow: 0 1px 4px #0009;
     }
+    /* Carousel styles */
+    .carousel-wrapper {
+      width: 100vw;
+      max-width: 430px;
+      margin: 30px auto 0 auto;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px #0005;
+      background: #fff;
+      position: relative;
+      display: none;
+    }
     @media (max-width: 430px) {
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(2, 1fr); gap: 18px 8px; }
@@ -169,6 +180,44 @@
       .destaque-link .icon-img { width: 70px; height: 70px; }
       .logo { width: 90px; height: 90px;}
       .destaque-label { font-size: 12px; }
+    }
+    @media (max-width: 600px) {
+      .carousel-wrapper { display: block; }
+    }
+    .carousel {
+      display: flex;
+      transition: transform 0.4s cubic-bezier(.4,1,.3,1);
+      touch-action: pan-x;
+    }
+    .carousel img {
+      width: 100vw;
+      max-width: 430px;
+      height: 170px;
+      object-fit: cover;
+      user-select: none;
+      pointer-events: none;
+    }
+    .carousel-dots {
+      position: absolute;
+      bottom: 8px;
+      left: 0; right: 0;
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+    }
+    .carousel-dot {
+      width: 10px; height: 10px;
+      border-radius: 50%;
+      background: #fff;
+      border: 1.5px solid #888;
+      opacity: 0.7;
+      transition: background 0.3s, opacity 0.3s;
+      cursor: pointer;
+    }
+    .carousel-dot.active {
+      background: #007aff;
+      opacity: 1;
+      border-color: #007aff;
     }
   </style>
 </head>
@@ -217,5 +266,107 @@
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
     </footer>
   </main>
+  <!-- Carrossel de imagens abaixo do conteúdo (visível no celular) -->
+  <div class="carousel-wrapper">
+    <div class="carousel" id="carousel">
+      <!-- As imagens serão inseridas via JS -->
+    </div>
+    <div class="carousel-dots" id="carousel-dots"></div>
+  </div>
+  <script>
+    // Coloque o caminho correto das suas imagens abaixo:
+    const images = [
+      "carousel/img1.jpg",
+      "carousel/img2.jpg",
+      "carousel/img3.jpg",
+      "carousel/img4.jpg",
+      "carousel/img5.jpg",
+      "carousel/img6.jpg",
+      "carousel/img7.jpg",
+      "carousel/img8.jpg",
+      "carousel/img9.jpg",
+      "carousel/img10.jpg"
+    ];
+
+    const carousel = document.getElementById('carousel');
+    const dotsContainer = document.getElementById('carousel-dots');
+    let idx = 0, intervalId = null, isDragging = false, startX = 0, currentX = 0;
+
+    // Gera os elementos das imagens
+    images.forEach(src => {
+      const img = document.createElement('img');
+      img.src = src;
+      carousel.appendChild(img);
+    });
+
+    // Gera os dots
+    images.forEach((_, i) => {
+      const dot = document.createElement('span');
+      dot.className = 'carousel-dot' + (i === 0 ? ' active' : '');
+      dot.onclick = () => goToSlide(i, true);
+      dotsContainer.appendChild(dot);
+    });
+
+    function updateDots() {
+      document.querySelectorAll('.carousel-dot').forEach((dot, i) => {
+        dot.classList.toggle('active', i === idx);
+      });
+    }
+    function goToSlide(i, resetTimer) {
+      idx = (i + images.length) % images.length;
+      carousel.style.transform = `translateX(-${idx * 100}vw)`;
+      updateDots();
+      if (resetTimer) {
+        clearInterval(intervalId);
+        intervalId = setInterval(nextSlide, 3000);
+      }
+    }
+    function nextSlide() { goToSlide(idx + 1); }
+    intervalId = setInterval(nextSlide, 3000);
+
+    // Touch events para arrastar (mobile)
+    carousel.addEventListener('touchstart', e => {
+      isDragging = true;
+      startX = e.touches[0].clientX;
+      carousel.style.transition = 'none';
+      clearInterval(intervalId);
+    });
+    carousel.addEventListener('touchmove', e => {
+      if (!isDragging) return;
+      currentX = e.touches[0].clientX;
+      const dx = currentX - startX;
+      carousel.style.transform = `translateX(${-idx * 100 + dx / window.innerWidth * 100}vw)`;
+    });
+    carousel.addEventListener('touchend', e => {
+      if (!isDragging) return;
+      isDragging = false;
+      carousel.style.transition = '';
+      const dx = currentX - startX;
+      if (dx > 50) goToSlide(idx - 1, true);
+      else if (dx < -50) goToSlide(idx + 1, true);
+      else goToSlide(idx, true);
+    });
+
+    // Mouse (desktop)
+    let mouseDown = false;
+    carousel.addEventListener('mousedown', e => { mouseDown = true; startX = e.clientX; clearInterval(intervalId); carousel.style.transition = 'none'; });
+    carousel.addEventListener('mousemove', e => {
+      if (!mouseDown) return;
+      currentX = e.clientX;
+      const dx = currentX - startX;
+      carousel.style.transform = `translateX(${-idx * 100 + dx / window.innerWidth * 100}vw)`;
+    });
+    carousel.addEventListener('mouseup', e => {
+      if (!mouseDown) return;
+      mouseDown = false;
+      carousel.style.transition = '';
+      const dx = currentX - startX;
+      if (dx > 50) goToSlide(idx - 1, true);
+      else if (dx < -50) goToSlide(idx + 1, true);
+      else goToSlide(idx, true);
+    });
+    carousel.addEventListener('mouseleave', e => { if (mouseDown) { mouseDown = false; goToSlide(idx, true); } });
+    window.addEventListener('resize', () => goToSlide(idx));
+  </script>
 </body>
 </html>
