--- a/index2.html
+++ b/index2.html
@@ -276,16 +276,16 @@
   <script>
     // Coloque o caminho correto das suas imagens abaixo:
     const images = [
-      "carousel/img1.jpg",
-      "carousel/img2.jpg",
-      "carousel/img3.jpg",
-      "carousel/img4.jpg",
-      "carousel/img5.jpg",
-      "carousel/img6.jpg",
-      "carousel/img7.jpg",
-      "carousel/img8.jpg",
-      "carousel/img9.jpg",
-      "carousel/img10.jpg"
+      "carrossel/img1.png",
+      "carorssel/img2.png",
+      "carorssel/img3.png",
+      "carorssel/img4.png",
+      "carorssel/img5.png",
+      "carorssel/img6.png",
+      "carorssel/img7.png",
+      "carorssel/img8.png",
+      "carorssel/img9.png",
+      "carorssel/img10.png"
     ];
 
     const carousel = document.getElementById('carousel');
