--- a/index2.html
+++ b/index2.html
@@ -277,15 +277,15 @@
     // Coloque o caminho correto das suas imagens abaixo:
     const images = [
       "carrossel/img1.png",
-      "carorssel/img2.png",
-      "carorssel/img3.png",
-      "carorssel/img4.png",
-      "carorssel/img5.png",
-      "carorssel/img6.png",
-      "carorssel/img7.png",
-      "carorssel/img8.png",
-      "carorssel/img9.png",
-      "carorssel/img10.png"
+      "carrossel/img2.png",
+      "carrossel/img3.png",
+      "carrossel/img4.png",
+      "carrossel/img5.png",
+      "carrossel/img6.png",
+      "carrossel/img7.png",
+      "carrossel/img8.png",
+      "carrossel/img9.png",
+      "carrossel/img10.png"
     ];
 
     const carousel = document.getElementById('carousel');
