--- a/index2.html
+++ b/index2.html
@@ -276,16 +276,16 @@
   <script>
     // Coloque o caminho correto das suas imagens abaixo:
     const images = [
-      "carrossel/img1.png",
-      "carrossel/img2.png",
-      "carrossel/img3.png",
-      "carrossel/img4.png",
-      "carrossel/img5.png",
-      "carrossel/img6.png",
-      "carrossel/img7.png",
-      "carrossel/img8.png",
-      "carrossel/img9.png",
-      "carrossel/img10.png"
+      "carrossel/img1.PNG",
+      "carrossel/img2.PNG",
+      "carrossel/img3.PNG",
+      "carrossel/img4.PNG",
+      "carrossel/img5.PNG",
+      "carrossel/img6.PNG",
+      "carrossel/img7.PNG",
+      "carrossel/img8.PNG",
+      "carrossel/img9.PNG",
+      "carrossel/img10.PNG"
     ];
 
     const carousel = document.getElementById('carousel');
