--- a/index2.html
+++ b/index2.html
@@ -188,14 +188,17 @@
       display: flex;
       transition: transform 0.4s cubic-bezier(.4,1,.3,1);
       touch-action: pan-x;
+      will-change: transform;
     }
     .carousel img {
-      width: 100vw;
+      width: 100%;
       max-width: 430px;
-      height: 430px;
+      height: 220px;
       object-fit: cover;
+      flex-shrink: 0;
       user-select: none;
       pointer-events: none;
+      display: block;
     }
     .carousel-dots {
       position: absolute;
@@ -312,9 +315,16 @@
         dot.classList.toggle('active', i === idx);
       });
     }
+
+    function getSlideWidth() {
+      // Garante que pega a largura real do carrossel (container)
+      return document.querySelector('.carousel-wrapper').offsetWidth;
+    }
+
     function goToSlide(i, resetTimer) {
       idx = (i + images.length) % images.length;
-      carousel.style.transform = `translateX(-${idx * 100}vw)`;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(-${idx * slideWidth}px)`;
       updateDots();
       if (resetTimer) {
         clearInterval(intervalId);
@@ -323,6 +333,9 @@
     }
     function nextSlide() { goToSlide(idx + 1); }
     intervalId = setInterval(nextSlide, 3000);
+
+    // Ajuste também ao redimensionar
+    window.addEventListener('resize', () => goToSlide(idx));
 
     // Touch events para arrastar (mobile)
     carousel.addEventListener('touchstart', e => {
@@ -335,7 +348,8 @@
       if (!isDragging) return;
       currentX = e.touches[0].clientX;
       const dx = currentX - startX;
-      carousel.style.transform = `translateX(${-idx * 100 + dx / window.innerWidth * 100}vw)`;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(${-idx * slideWidth + dx}px)`;
     });
     carousel.addEventListener('touchend', e => {
       if (!isDragging) return;
@@ -354,7 +368,8 @@
       if (!mouseDown) return;
       currentX = e.clientX;
       const dx = currentX - startX;
-      carousel.style.transform = `translateX(${-idx * 100 + dx / window.innerWidth * 100}vw)`;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(${-idx * slideWidth + dx}px)`;
     });
     carousel.addEventListener('mouseup', e => {
       if (!mouseDown) return;
@@ -366,7 +381,6 @@
       else goToSlide(idx, true);
     });
     carousel.addEventListener('mouseleave', e => { if (mouseDown) { mouseDown = false; goToSlide(idx, true); } });
-    window.addEventListener('resize', () => goToSlide(idx));
   </script>
 </body>
 </html>
