--- a/index2.html
+++ b/index2.html
@@ -171,7 +171,7 @@
       box-shadow: 0 2px 10px #0005;
       background: #fff;
       position: relative;
-      display: none;
+      /*display: none; */
     }
     @media (max-width: 590px) {
       .container { max-width: 98vw; padding: 10vw 1vw; }
@@ -182,7 +182,7 @@
       .destaque-label { font-size: 12px; }
     }
     @media (max-width: 600px) {
-      .carousel-wrapper { display: block; }
+      /*.carousel-wrapper { display: block; }*/
     }
     .carousel {
       display: flex;
